update dep proper to pull latest tag

--- a/rebar.config
+++ b/rebar.config
@@ -8,5 +8,5 @@
  %% For runtime
  %% --
  %% For tests
-  {proper, "1.0",
-    {git, "https://github.com/manopapad/proper.git", "master"}}]}.
+  {proper, "1.2",
+    {git, "https://github.com/manopapad/proper.git", {tag, "v1.2"}}}]}.
